fixed label and input spacing

--- a/css/screen.css
+++ b/css/screen.css
@@ -82,10 +82,11 @@ body {
 #form-container form label {
   position: inline-flex;
   padding: 5px;
-  float: inline-end;
+  float: inline-start;
 }
 
 #form-container form input {
   position: relative;
   padding: 5px;
+  float: inline-end;
 }
